@@ -1673,7 +1673,7 @@ a.showit:hover span {
 }
 
 .ac_loading {
-	background: white url(/images/indicator.gif) right center no-repeat;
+	background: white url(../../images/indicator.gif) right center no-repeat;
 }
 
 .ac_odd {
