@@ -1358,7 +1358,7 @@ a.showit:hover span {
 }
 
 .ac_loading {
-	background: white url(/images/indicator.gif) right center no-repeat;
+	background: white url(../../images/indicator.gif) right center no-repeat;
 }
 
 .ac_odd {
